feat: Implement theme switching and branding
This commit introduces the ability to switch between multiple themes (Light, Dark, Elegant) and updates the application's branding and styling to reflect this.

Key changes include:
- Defining CSS variables for theme-specific colors.
- Updating `index.html` to include theme styles and a new title.
- Modifying `ThemeProvider` to handle theme cycling and apply theme classes to the root element.
- Adjusting `Layout`, `Header`, and `Footer` components to use theme-based CSS variables for consistent styling across themes.
- Expanding the `Theme` enum in `types.ts` to include the new 'Elegant' theme.
- Updating the application's logo/iconography in `Header.tsx` to match the new branding.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Modular Templating System</title>
+    <title>OneDering Framework</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      :root {
+        --color-bg-primary: 255 255 255; /* white */
+        --color-bg-secondary: 249 250 251; /* gray-50 */
+        --color-bg-tertiary: 243 244 246; /* gray-100 */
+        --color-border: 229 231 235; /* gray-200 */
+        --color-text-base: 31 41 55; /* gray-800 */
+        --color-text-muted: 107 114 128; /* gray-500 */
+        --color-text-inverted: 255 255 255; /* white */
+        --color-primary: 59 130 246; /* blue-500 */
+        --color-primary-hover: 37 99 235; /* blue-600 */
+      }
+      .dark {
+        --color-bg-primary: 31 41 55; /* gray-800 */
+        --color-bg-secondary: 17 24 39; /* gray-900 */
+        --color-bg-tertiary: 55 65 81; /* gray-700 */
+        --color-border: 75 85 99; /* gray-600 */
+        --color-text-base: 229 231 235; /* gray-200 */
+        --color-text-muted: 156 163 175; /* gray-400 */
+        --color-text-inverted: 0 0 0; /* black */
+        --color-primary: 59 130 246; /* blue-500 */
+        --color-primary-hover: 96 165 250; /* blue-400 */
+      }
+      .elegant {
+        --color-bg-primary: 245 240 230; /* #F5F0E6 Warm Beige */
+        --color-bg-secondary: 61 44 46;   /* #3D2C2E Rich Espresso */
+        --color-bg-tertiary: 235 229 217; /* Lighter Beige for hover/secondary */
+        --color-border: 212 185 148;     /* Lighter Gold */
+        --color-text-base: 74 63 53;      /* #4A3F35 Dark Chocolate */
+        --color-text-muted: 193 165 123;   /* #C1A57B Muted Gold */
+        --color-text-inverted: 245 240 230; /* beige */
+        --color-primary: 193 165 123;     /* #C1A57B Muted Gold */
+        --color-primary-hover: 173 149 111;/* Darker Gold */
+      }
+    </style>
     <script>
       tailwind.config = {
         darkMode: 'class',
         theme: {
           extend: {
             colors: {
+              'theme-bg-primary': 'rgb(var(--color-bg-primary) / <alpha-value>)',
+              'theme-bg-secondary': 'rgb(var(--color-bg-secondary) / <alpha-value>)',
+              'theme-bg-tertiary': 'rgb(var(--color-bg-tertiary) / <alpha-value>)',
+              'theme-border': 'rgb(var(--color-border) / <alpha-value>)',
+              'theme-text-base': 'rgb(var(--color-text-base) / <alpha-value>)',
+              'theme-text-muted': 'rgb(var(--color-text-muted) / <alpha-value>)',
+              'theme-text-inverted': 'rgb(var(--color-text-inverted) / <alpha-value>)',
+              'theme-primary': 'rgb(var(--color-primary) / <alpha-value>)',
+              'theme-primary-hover': 'rgb(var(--color-primary-hover) / <alpha-value>)',
               primary: {
                 "50": "#eff6ff", "100": "#dbeafe", "200": "#bfdbfe", "300": "#93c5fd", "400": "#60a5fa", "500": "#3b82f6", "600": "#2563eb", "700": "#1d4ed8", "800": "#1e40af", "900": "#1e3a8a"
               }
